--- a/SampleCode/build.xml
+++ b/SampleCode/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ReflektSampleCode" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ReflektSampleCode.</description>
+<project name="SampleCode" default="default" basedir=".">
+    <description>Builds, tests, and runs the project SampleCode.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
